[gd_scene load_steps=41 format=2]

[ext_resource path="res://Scenes/PlayableCharacters/PlayableCharacter1/Assasin.gd" type="Script" id=1]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Idle/ki1.png" type="Texture" id=2]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Idle/ki2.png" type="Texture" id=3]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Idle/ki3.png" type="Texture" id=4]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Idle/ki4.png" type="Texture" id=5]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Attack/ka1.png" type="Texture" id=6]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Attack/ka2.png" type="Texture" id=7]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Attack/ka3.png" type="Texture" id=8]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Attack/ka4.png" type="Texture" id=9]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Attack/ka5.png" type="Texture" id=10]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Attack/ka6.png" type="Texture" id=11]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Attack/ka7.png" type="Texture" id=12]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Attack/ka8.png" type="Texture" id=13]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Attack/ka9.png" type="Texture" id=14]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Attack/ka10.png" type="Texture" id=15]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Walk/kw1.png" type="Texture" id=16]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Walk/kw2.png" type="Texture" id=17]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Walk/kw3.png" type="Texture" id=18]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Walk/kw4.png" type="Texture" id=19]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Walk/kw5.png" type="Texture" id=20]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Walk/kw6.png" type="Texture" id=21]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Walk/kw7.png" type="Texture" id=22]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Walk/kw8.png" type="Texture" id=23]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Jump/kj1.png" type="Texture" id=24]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Jump/kj2.png" type="Texture" id=25]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Jump/kj3.png" type="Texture" id=26]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Hit/kh1.png" type="Texture" id=27]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Hit/kh2.png" type="Texture" id=28]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Hit/kh3.png" type="Texture" id=29]
[ext_resource path="res://Art/Sprites/PlayableCharacters/PlayableCharacter1/Hit/kh4.png" type="Texture" id=30]
[ext_resource path="res://Scenes/PlayableCharacters/PlayableCharacter1/AnimatedSprite.gd" type="Script" id=31]
[ext_resource path="res://Systems/StateSystem/StateSystem.tscn" type="PackedScene" id=32]
[ext_resource path="res://Systems/GravitySystem/GravitySystem.tscn" type="PackedScene" id=33]
[ext_resource path="res://Scenes/PlayableCharacters/PlayableCharacter1/MovingSystem.gd" type="Script" id=34]
[ext_resource path="res://Scenes/Components/CharacterController.tscn" type="PackedScene" id=35]
[ext_resource path="res://Scenes/PlayableCharacters/PlayableCharacter1/Camera2D.gd" type="Script" id=36]
[ext_resource path="res://Scenes/Components/Life.tscn" type="PackedScene" id=37]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "Hit",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 13.2626, 33.702 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 20.8526, 14.7551 )

[node name="Assasin" type="KinematicBody2D"]

position = Vector2( 363.269, 416.026 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
JUMP_CONSTANT = 27
jump_force = 0
movement_speed = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

position = Vector2( 9.50145, -18.9835 )
scale = Vector2( 1.613, 1.83594 )
frames = SubResource( 1 )
animation = "Attack"
frame = 5
script = ExtResource( 31 )

[node name="StateSystem" parent="." index="1" instance=ExtResource( 32 )]

[node name="GravitySystem" parent="." index="2" instance=ExtResource( 33 )]

[node name="MovingSystem" type="Node" parent="." index="3"]

script = ExtResource( 34 )

[node name="CharacterController" parent="." index="4" instance=ExtResource( 35 )]

velocidadMovimiento = 2.0
salto = 27.0
gravedad = 20.0

[node name="Camera2D" type="Camera2D" parent="." index="5"]

offset = Vector2( 80, -70 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.6, 0.6 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 36 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="6"]

position = Vector2( 4.85297, -17.1473 )
shape = SubResource( 2 )

[node name="AttackCollision" type="CollisionShape2D" parent="." index="7"]

position = Vector2( 32.2046, -34.8001 )
shape = SubResource( 3 )
disabled = true

[node name="AttackCollision2" type="CollisionShape2D" parent="." index="8"]

position = Vector2( -12.443, -32.5352 )
shape = SubResource( 3 )
disabled = true

[node name="Life" parent="." index="9" instance=ExtResource( 37 )]

powerUp = 0


